Box alignment issue resolved (merged)
Box alignment issue resolved (merged)

--- a/public/web_assets/css/site-style.css
+++ b/public/web_assets/css/site-style.css
@@ -654,3 +654,7 @@
 .video_review_container h5 {
     color: #ffffff;
 }
+
+.course-box .course-info{
+    height: 80px !important;
+}
